<resources>
    <string name="app_name">ColorType</string>
    <string name="choose_color">Choose color</string>
    <string name="red">RED</string>
    <string name="blue">blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">green</string>
    <string name="red_details">YO ARE RED, DARONGAR</string>
    <string name="blue_details">You are blue, BORONGARA</string>
</resources>