<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choose_color"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:orientation="horizontal"
                android:padding="@dimen/layout_padding">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_red_shape"
                    android:padding="@dimen/button_padding"
                    android:text="@string/red"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue_shape"
                    android:padding="@dimen/button_padding"
                    android:text="@string/blue"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layout_first"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:orientation="horizontal"
                android:padding="@dimen/layout_padding">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_yellow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_yellow_shape"
                    android:padding="@dimen/button_padding"
                    android:text="@string/yellow"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_green"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_green_shape"
                    android:padding="@dimen/button_padding"
                    android:text="@string/green"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
